// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`app/Home renders a button to enable the popup in Firefox 1`] = `
<div
  class="home"
>
  <main
    class="homeSection"
  >
    <header>
      <h1
        class="appHeader"
      >
        <span
          class="appHeaderSlogan"
        >
          <a
            class="appHeaderLink"
            href="/"
          >
            ⁨Firefox Profiler⁩
          </a>
           — 
          <span
            class="appHeaderSubtext"
          >
            Web app for ⁨Firefox⁩ performance analysis
          </span>
        </span>
        <a
          class="appHeaderGithubIcon"
          href="https://github.com/firefox-devtools/profiler"
          rel="noopener noreferrer"
          target="_blank"
          title="Go to our Git repository (this opens in a new window)"
        >
          <svg
            aria-label="github"
            class="octicon octicon-mark-github"
            height="22"
            version="1.1"
            viewBox="0 0 16 16"
            width="22"
          >
            <path
              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
      </h1>
    </header>
    <div
      class="homeSpecialMessage"
    >
      This is a special message
    </div>
    <p>
      Capture a performance profile. Analyze it. Share it. Make the web faster.
    </p>
    <div
      class="homeInstructionsTransitionGroup"
    >
      <div
        class="homeInstructions"
        data-testid="home-enable-popup-instructions"
      >
        <img
          alt="screenshot of profiler.firefox.com"
          class="homeSectionScreenshot"
          src="test-file-stub"
        />
        <div>
          <button
            class="homeSectionButton"
            type="button"
          >
            <span
              class="homeSectionPlus"
            >
              +
            </span>
            Enable ⁨Firefox Profiler⁩ Menu Button
          </button>
          <a
            class="homeSectionButton"
            href="/docs/"
          >
            <span
              class="homeSectionDocsIcon"
            />
            Documentation
          </a>
          <p>
            Enable the profiler menu button to start recording a performance
profile in ⁨Firefox⁩, then analyze it and share it with profiler.firefox.com.
          </p>
          <p>
            You can also profile ⁨Firefox for Android⁩. For more
information, please consult this documentation:

            <a
              href="https://profiler.firefox.com/docs/#/./guide-profiling-android-directly-on-device?id=profiling-firefox-for-android-directly-on-device"
            >
              Profiling ⁨Firefox for Android⁩ directly on device
            </a>
            .
          </p>
        </div>
      </div>
    </div>
    <section
      class="homeAdditionalContent"
    >
      <h2
        class="homeAdditionalContentTitle protocol-display-xs"
      >
        Load existing profiles
      </h2>
      <section
        class="homeActions"
      >
        <p>
          You can 
          <strong>
            drag and drop
          </strong>
           a profile file here to load it, or:
        </p>
        <div
          class="homeSectionLoadProfile"
        >
          <div
            class="homeSectionActionButtons"
          >
            <input
              class="homeSectionUploadFromFileInput"
              type="file"
            />
            <button
              class="homeSectionButton"
              type="button"
            >
              Load a profile from file
            </button>
            <button
              aria-expanded="false"
              class="homeSectionButton"
              type="button"
            >
              Load a profile from a URL
            </button>
          </div>
        </div>
        <p>
          The ⁨Firefox Profiler⁩ can also import profiles from other profilers, such as

          <a
            href="https://profiler.firefox.com/docs/#/./guide-perf-profiling"
          >
            Linux perf
          </a>
          , 
          <a
            href="https://profiler.firefox.com/docs/#/./guide-android-profiling"
          >
            Android SimplePerf
          </a>
          , the
Chrome performance panel, 
          <a
            href="https://developer.android.com/studio/profile/cpu-profiler"
          >
            Android Studio
          </a>
          , or
any file using the 
          <a
            href="https://valgrind.org/docs/manual/dh-manual.html"
          >
            dhat format
          </a>
           or 
          <a
            href="https://docs.google.com/document/d/1CvAClvFfyA5R-PhYUmn5OOQtYMH4h6I0nSsKchNAySU/preview"
          >
            Google’s Trace Event
Format
          </a>
          . 
          <a
            href="https://github.com/firefox-devtools/profiler/blob/main/docs-developer/custom-importer.md"
          >
            Learn how to write your
own importer
          </a>
          .
        </p>
        <p>
          You can also compare recordings. 
          <a
            href="/compare/"
          >
            Open the comparing interface.
          </a>
        </p>
      </section>
      <section>
        <h2
          class="homeRecentUploadedRecordingsTitle protocol-display-xxs"
        >
          Your recent uploaded recordings
        </h2>
        <list-of-published-profiles
          limit="3"
          withactionbuttons="false"
        />
      </section>
    </section>
    <div
      class="dragAndDropOverlayWrapper"
    >
      <div
        class="dragAndDropOverlay"
      >
        Drop a saved profile here
      </div>
    </div>
    <div
      class="homeDarkModeBox"
    >
      <label
        class="photon-label"
        for="home-dark-mode"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          id="home-dark-mode"
          type="checkbox"
        />
        <span>
          Dark mode
        </span>
      </label>
    </div>
  </main>
</div>
`;

exports[`app/Home renders an error if the WebChannel is not available 1`] = `
<p>
  This profiler instance was unable to connect to the WebChannel. This usually means that it’s
running on a different host from the one that is specified in the preference

  <code>
    devtools.performance.recording.ui-base-url
  </code>
  . If you would like to capture new
profiles with this instance, and give it programmatic control of the profiler menu button,
you can go to 
  <code>
    about:config
  </code>
   and change the preference.
</p>
`;

exports[`app/Home renders the Chrome extension instructions for Chromium based browsers 1`] = `
<div
  class="home"
>
  <main
    class="homeSection"
  >
    <header>
      <h1
        class="appHeader"
      >
        <span
          class="appHeaderSlogan"
        >
          <a
            class="appHeaderLink"
            href="/"
          >
            ⁨Firefox Profiler⁩
          </a>
           — 
          <span
            class="appHeaderSubtext"
          >
            Web app for ⁨Firefox⁩ performance analysis
          </span>
        </span>
        <a
          class="appHeaderGithubIcon"
          href="https://github.com/firefox-devtools/profiler"
          rel="noopener noreferrer"
          target="_blank"
          title="Go to our Git repository (this opens in a new window)"
        >
          <svg
            aria-label="github"
            class="octicon octicon-mark-github"
            height="22"
            version="1.1"
            viewBox="0 0 16 16"
            width="22"
          >
            <path
              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
      </h1>
    </header>
    <div
      class="homeSpecialMessage"
    >
      This is a special message
    </div>
    <p>
      Capture a performance profile. Analyze it. Share it. Make the web faster.
    </p>
    <div
      class="homeInstructionsTransitionGroup"
    >
      <div
        class="homeInstructions"
        data-testid="home-enable-popup-instructions"
      >
        <img
          alt="screenshot of profiler.firefox.com"
          class="homeSectionScreenshot"
          src="test-file-stub"
        />
        <div>
          <a
            class="homeSectionButton"
            href="https://chromewebstore.google.com/detail/firefox-profiler/ljmahpnflmbkgaipnfbpgjipcnahlghn"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="homeSectionPlus"
            >
              +
            </span>
            Install the Chrome extension
          </a>
          <a
            class="homeSectionButton"
            href="/docs/"
          >
            <span
              class="homeSectionDocsIcon"
            />
            Documentation
          </a>
          <p>
            Use the 
            <a
              href="https://chromewebstore.google.com/detail/firefox-profiler/ljmahpnflmbkgaipnfbpgjipcnahlghn"
              rel="noreferrer"
              target="_blank"
            >
              ⁨Firefox Profiler⁩ extension for Chrome
            </a>
            
to capture performance profiles in Chrome and analyze them in the
⁨Firefox Profiler⁩. Install the extension from the Chrome Web Store.
          </p>
          <p>
            Once installed, use the extension’s
toolbar icon or the shortcuts to start and stop profiling. You can also
export profiles and load them here for detailed analysis.
          </p>
          <div>
            <p>
              <kbd>
                Ctrl
              </kbd>
              +
              <kbd>
                Shift
              </kbd>
              +
              <kbd>
                1
              </kbd>
               
              Stop and start profiling
            </p>
            <p>
              <kbd>
                Ctrl
              </kbd>
              +
              <kbd>
                Shift
              </kbd>
              +
              <kbd>
                2
              </kbd>
               
              Capture and load profile
            </p>
          </div>
        </div>
      </div>
    </div>
    <section
      class="homeAdditionalContent"
    >
      <h2
        class="homeAdditionalContentTitle protocol-display-xs"
      >
        Load existing profiles
      </h2>
      <section
        class="homeActions"
      >
        <p>
          You can 
          <strong>
            drag and drop
          </strong>
           a profile file here to load it, or:
        </p>
        <div
          class="homeSectionLoadProfile"
        >
          <div
            class="homeSectionActionButtons"
          >
            <input
              class="homeSectionUploadFromFileInput"
              type="file"
            />
            <button
              class="homeSectionButton"
              type="button"
            >
              Load a profile from file
            </button>
            <button
              aria-expanded="false"
              class="homeSectionButton"
              type="button"
            >
              Load a profile from a URL
            </button>
          </div>
        </div>
        <p>
          The ⁨Firefox Profiler⁩ can also import profiles from other profilers, such as

          <a
            href="https://profiler.firefox.com/docs/#/./guide-perf-profiling"
          >
            Linux perf
          </a>
          , 
          <a
            href="https://profiler.firefox.com/docs/#/./guide-android-profiling"
          >
            Android SimplePerf
          </a>
          , the
Chrome performance panel, 
          <a
            href="https://developer.android.com/studio/profile/cpu-profiler"
          >
            Android Studio
          </a>
          , or
any file using the 
          <a
            href="https://valgrind.org/docs/manual/dh-manual.html"
          >
            dhat format
          </a>
           or 
          <a
            href="https://docs.google.com/document/d/1CvAClvFfyA5R-PhYUmn5OOQtYMH4h6I0nSsKchNAySU/preview"
          >
            Google’s Trace Event
Format
          </a>
          . 
          <a
            href="https://github.com/firefox-devtools/profiler/blob/main/docs-developer/custom-importer.md"
          >
            Learn how to write your
own importer
          </a>
          .
        </p>
        <p>
          You can also compare recordings. 
          <a
            href="/compare/"
          >
            Open the comparing interface.
          </a>
        </p>
      </section>
      <section>
        <h2
          class="homeRecentUploadedRecordingsTitle protocol-display-xxs"
        >
          Your recent uploaded recordings
        </h2>
        <list-of-published-profiles
          limit="3"
          withactionbuttons="false"
        />
      </section>
    </section>
    <div
      class="dragAndDropOverlayWrapper"
    >
      <div
        class="dragAndDropOverlay"
      >
        Drop a saved profile here
      </div>
    </div>
    <div
      class="homeDarkModeBox"
    >
      <label
        class="photon-label"
        for="home-dark-mode"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          id="home-dark-mode"
          type="checkbox"
        />
        <span>
          Dark mode
        </span>
      </label>
    </div>
  </main>
</div>
`;

exports[`app/Home renders the information screen for other browsers 1`] = `
<div
  class="home"
>
  <main
    class="homeSection"
  >
    <header>
      <h1
        class="appHeader"
      >
        <span
          class="appHeaderSlogan"
        >
          <a
            class="appHeaderLink"
            href="/"
          >
            ⁨Firefox Profiler⁩
          </a>
           — 
          <span
            class="appHeaderSubtext"
          >
            Web app for ⁨Firefox⁩ performance analysis
          </span>
        </span>
        <a
          class="appHeaderGithubIcon"
          href="https://github.com/firefox-devtools/profiler"
          rel="noopener noreferrer"
          target="_blank"
          title="Go to our Git repository (this opens in a new window)"
        >
          <svg
            aria-label="github"
            class="octicon octicon-mark-github"
            height="22"
            version="1.1"
            viewBox="0 0 16 16"
            width="22"
          >
            <path
              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
      </h1>
    </header>
    <div
      class="homeSpecialMessage"
    >
      This is a special message
    </div>
    <p>
      Capture a performance profile. Analyze it. Share it. Make the web faster.
    </p>
    <div
      class="homeInstructionsTransitionGroup"
    >
      <div
        class="homeInstructions"
        data-testid="home-other-browser-instructions"
      >
        <img
          alt="screenshot of profiler.firefox.com"
          class="homeSectionScreenshot"
          src="test-file-stub"
        />
        <div>
          <a
            class="homeSectionButton"
            href="/docs/"
          >
            <span
              class="homeSectionDocsIcon"
            />
            Documentation
          </a>
          <p>
            Recording performance profiles requires 
            <a
              href="https://www.mozilla.org/en-US/firefox/new/"
            >
              ⁨Firefox⁩
            </a>
            .
However, existing profiles can be viewed in any modern browser.
          </p>
          <p>
            You can also profile ⁨Firefox for Android⁩. For more
information, please consult this documentation:

            <a
              href="https://profiler.firefox.com/docs/#/./guide-profiling-android-directly-on-device?id=profiling-firefox-for-android-directly-on-device"
            >
              Profiling ⁨Firefox for Android⁩ directly on device
            </a>
            .
          </p>
        </div>
      </div>
    </div>
    <section
      class="homeAdditionalContent"
    >
      <h2
        class="homeAdditionalContentTitle protocol-display-xs"
      >
        Load existing profiles
      </h2>
      <section
        class="homeActions"
      >
        <p>
          You can 
          <strong>
            drag and drop
          </strong>
           a profile file here to load it, or:
        </p>
        <div
          class="homeSectionLoadProfile"
        >
          <div
            class="homeSectionActionButtons"
          >
            <input
              class="homeSectionUploadFromFileInput"
              type="file"
            />
            <button
              class="homeSectionButton"
              type="button"
            >
              Load a profile from file
            </button>
            <button
              aria-expanded="false"
              class="homeSectionButton"
              type="button"
            >
              Load a profile from a URL
            </button>
          </div>
        </div>
        <p>
          The ⁨Firefox Profiler⁩ can also import profiles from other profilers, such as

          <a
            href="https://profiler.firefox.com/docs/#/./guide-perf-profiling"
          >
            Linux perf
          </a>
          , 
          <a
            href="https://profiler.firefox.com/docs/#/./guide-android-profiling"
          >
            Android SimplePerf
          </a>
          , the
Chrome performance panel, 
          <a
            href="https://developer.android.com/studio/profile/cpu-profiler"
          >
            Android Studio
          </a>
          , or
any file using the 
          <a
            href="https://valgrind.org/docs/manual/dh-manual.html"
          >
            dhat format
          </a>
           or 
          <a
            href="https://docs.google.com/document/d/1CvAClvFfyA5R-PhYUmn5OOQtYMH4h6I0nSsKchNAySU/preview"
          >
            Google’s Trace Event
Format
          </a>
          . 
          <a
            href="https://github.com/firefox-devtools/profiler/blob/main/docs-developer/custom-importer.md"
          >
            Learn how to write your
own importer
          </a>
          .
        </p>
        <p>
          You can also compare recordings. 
          <a
            href="/compare/"
          >
            Open the comparing interface.
          </a>
        </p>
      </section>
      <section>
        <h2
          class="homeRecentUploadedRecordingsTitle protocol-display-xxs"
        >
          Your recent uploaded recordings
        </h2>
        <list-of-published-profiles
          limit="3"
          withactionbuttons="false"
        />
      </section>
    </section>
    <div
      class="dragAndDropOverlayWrapper"
    >
      <div
        class="dragAndDropOverlay"
      >
        Drop a saved profile here
      </div>
    </div>
    <div
      class="homeDarkModeBox"
    >
      <label
        class="photon-label"
        for="home-dark-mode"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          id="home-dark-mode"
          type="checkbox"
        />
        <span>
          Dark mode
        </span>
      </label>
    </div>
  </main>
</div>
`;
